# pg_delta_lake_cdc

./: .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  apache-arrow-apt-source-latest-noble.deb  architecture.md  design.md  mermaid_medallion.mmd
samples/databricks/: README.md  silver_materializer.py
scripts/: render_diagrams.py
src/: BoundedBuffer.hpp  DeltaLogWriter.hpp  NetworkReceiver.cpp  NetworkReceiver.hpp  ParquetWriter.cpp  ParquetWriter.hpp  TableRegistry.hpp  TableWriter.cpp  TableWriter.hpp  WALReceiver.cpp  WALReceiver.hpp  main.cpp
test/: Dockerfile.duckdb  Dockerfile.spark  Dockerfile.workload  docker-compose.yaml  duckdb_verify.py  generate_workload.py  init.sql  pyspark_verify.py  silver_materializer.py  spark_analytics.py
test/hn_ingest/: .dockerignore  .env.example  Dockerfile  README.md  go.mod  go.sum
test/hn_ingest/cmd/ingest/: main.go
test/hn_ingest/internal/hn/: client.go
test/hn_ingest/internal/storage/: db.go  factory.go  store.go
